--- a/07_14_23_day5_dimensionality_reduction/code/diy_notebooks/finalCountColabExercises.ipynb
+++ b/07_14_23_day5_dimensionality_reduction/code/diy_notebooks/finalCountColabExercises.ipynb
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "Nj7fi7kx05Mu"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -110,10 +110,23 @@
         "!pip --quiet install anndata"
       ],
       "metadata": {
-        "id": "VFXhrQPZ1DxC"
+        "id": "VFXhrQPZ1DxC",
+        "outputId": "0a592472-ad86-4187-cb2e-26d83eca6c9c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/103.0 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.0/103.0 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -134,7 +147,7 @@
         "from scipy.special import factorial\n",
         "from scipy.optimize import fmin_l_bfgs_b as optim"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -145,7 +158,7 @@
       "source": [
         "# ! allows you to run commands in the command line, as you would in your normal terminal/command line interface"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -154,21 +167,49 @@
       "metadata": {
         "id": "IP41916wpRWs"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yH-EpSmB9Y_x"
+        "id": "yH-EpSmB9Y_x",
+        "outputId": "e462c6ba-574d-494e-c757-2258f9f8a5c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Download MoP BICCN data from Caltech Data\n",
         "\n",
-        "!wget --content-disposition https://data.caltech.edu/tindfiles/serve/b75ba34a-46ed-458e-8c1f-4e805cf4871a/"
+        "!wget --content-disposition https://data.caltech.edu/records/y4eyk-fhv29/files/countsMOP.tar.gz?download=1\n",
+        "#https://data.caltech.edu/tindfiles/serve/b75ba34a-46ed-458e-8c1f-4e805cf4871a/"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-07-14 21:36:18--  https://data.caltech.edu/records/y4eyk-fhv29/files/countsMOP.tar.gz?download=1\n",
+            "Resolving data.caltech.edu (data.caltech.edu)... 35.155.11.48\n",
+            "Connecting to data.caltech.edu (data.caltech.edu)|35.155.11.48|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 FOUND\n",
+            "Location: https://s3.us-west-2.amazonaws.com/caltechdata/27/9e/e895-194b-4665-962d-c4b2abfe25d1/data?response-content-type=application%2Foctet-stream&response-content-disposition=attachment%3B%20filename%3DcountsMOP.tar.gz&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARCVIVNNAP7NNDVEA%2F20230714%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230714T213619Z&X-Amz-Expires=60&X-Amz-SignedHeaders=host&X-Amz-Signature=f6558e74f979ab77309c0b28aed937607e03a112cf62a7d67c81956b5bc8f2be [following]\n",
+            "--2023-07-14 21:36:19--  https://s3.us-west-2.amazonaws.com/caltechdata/27/9e/e895-194b-4665-962d-c4b2abfe25d1/data?response-content-type=application%2Foctet-stream&response-content-disposition=attachment%3B%20filename%3DcountsMOP.tar.gz&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARCVIVNNAP7NNDVEA%2F20230714%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230714T213619Z&X-Amz-Expires=60&X-Amz-SignedHeaders=host&X-Amz-Signature=f6558e74f979ab77309c0b28aed937607e03a112cf62a7d67c81956b5bc8f2be\n",
+            "Resolving s3.us-west-2.amazonaws.com (s3.us-west-2.amazonaws.com)... 52.92.213.32, 52.218.201.200, 52.218.243.32, ...\n",
+            "Connecting to s3.us-west-2.amazonaws.com (s3.us-west-2.amazonaws.com)|52.92.213.32|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 7159635 (6.8M) [application/octet-stream]\n",
+            "Saving to: ‘countsMOP.tar.gz’\n",
+            "\n",
+            "countsMOP.tar.gz    100%[===================>]   6.83M  8.72MB/s    in 0.8s    \n",
+            "\n",
+            "2023-07-14 21:36:20 (8.72 MB/s) - ‘countsMOP.tar.gz’ saved [7159635/7159635]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -178,7 +219,7 @@
       "metadata": {
         "id": "fmMctihjpGnF"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
