--- a/07_14_23_day5_dimensionality_reduction/code/diy_notebooks/regressionColabExercises.ipynb
+++ b/07_14_23_day5_dimensionality_reduction/code/diy_notebooks/regressionColabExercises.ipynb
@@ -54,7 +54,7 @@
       "metadata": {
         "id": "Nj7fi7kx05Mu"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "vYTZEjs9AqwV"
       },
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "kNFuUFJ78cN5"
       },
@@ -111,16 +111,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "yH-EpSmB9Y_x"
+        "id": "yH-EpSmB9Y_x",
+        "outputId": "61fdd89f-0cc3-4d69-e1be-789794888841",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-07-14 21:54:59--  https://data.caltech.edu/records/ar4na-8wa44/files/regrMOP.tar.gz?download=1\n",
+            "Resolving data.caltech.edu (data.caltech.edu)... 35.155.11.48\n",
+            "Connecting to data.caltech.edu (data.caltech.edu)|35.155.11.48|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 FOUND\n",
+            "Location: https://s3.us-west-2.amazonaws.com/caltechdata/3c/10/94a5-0585-4e9d-a5ac-f38a4acd2d99/data?response-content-type=application%2Foctet-stream&response-content-disposition=attachment%3B%20filename%3DregrMOP.tar.gz&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARCVIVNNAP7NNDVEA%2F20230714%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230714T215459Z&X-Amz-Expires=60&X-Amz-SignedHeaders=host&X-Amz-Signature=4d3a42fcb4b68b0f4c74ad1113635b433ad2c6367acca631a82c5b280cd086b3 [following]\n",
+            "--2023-07-14 21:55:00--  https://s3.us-west-2.amazonaws.com/caltechdata/3c/10/94a5-0585-4e9d-a5ac-f38a4acd2d99/data?response-content-type=application%2Foctet-stream&response-content-disposition=attachment%3B%20filename%3DregrMOP.tar.gz&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIARCVIVNNAP7NNDVEA%2F20230714%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230714T215459Z&X-Amz-Expires=60&X-Amz-SignedHeaders=host&X-Amz-Signature=4d3a42fcb4b68b0f4c74ad1113635b433ad2c6367acca631a82c5b280cd086b3\n",
+            "Resolving s3.us-west-2.amazonaws.com (s3.us-west-2.amazonaws.com)... 52.218.180.224, 52.218.133.88, 52.92.130.168, ...\n",
+            "Connecting to s3.us-west-2.amazonaws.com (s3.us-west-2.amazonaws.com)|52.218.180.224|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 28310869 (27M) [application/octet-stream]\n",
+            "Saving to: ‘regrMOP.tar.gz’\n",
+            "\n",
+            "regrMOP.tar.gz      100%[===================>]  27.00M  19.8MB/s    in 1.4s    \n",
+            "\n",
+            "2023-07-14 21:55:01 (19.8 MB/s) - ‘regrMOP.tar.gz’ saved [28310869/28310869]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "#Download count matrix of cell by gene counts\n",
         "#Cells are 10x sequenced mouse primary cortex cells\n",
         "\n",
-        "!wget --content-disposition https://data.caltech.edu/tindfiles/serve/2a3c58f3-dde2-4a46-9497-eaf6a4f9c3fc/"
+        "!wget --content-disposition https://data.caltech.edu/records/ar4na-8wa44/files/regrMOP.tar.gz?download=1 #new link"
       ]
     },
     {
